# trellis-law-assessment

./: .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml
api/: __init__.py
api/v1/: __init__.py
api/v1/monitoring/: __init__.py  health.py
api/v1/numbers/: __init__.py  numbers.py
app/controllers/: __init__.py  number.py
app/models/extras/: health.py
app/models/requests/: numbers.py
app/models/responses/: numbers.py
app/services/: __init__.py  number_to_english.py
core/: config.py  server.py
core/exceptions/: messages.py
core/security/: auth.py
tests/: conftest.py
tests/api/: test_number.py
tests/services/: test_number_service.py
